--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,9 +6,30 @@ jobs:
     container: ryuichiueda/ubuntu22.04-ros2:latest
     steps:
       - uses: actions/checkout@v2
-      - name: build and test
+
+      - name: Setup Python and Install pip
         run: |
-          pip install requests
+          apt-get update
+          apt-get install -y python3-pip
+          pip3 install --upgrade pip
+
+      - name: Setup ROS workspace
+        run: |
+          mkdir -p /root/ros2_ws/src
           rsync -av ./ /root/ros2_ws/src/mypkg/
           cd /root/ros2_ws
+          rosdep update
+          rosdep install --from-paths src --ignore-src -r -y
+          colcon build
+          source /opt/ros/humble/setup.bash
+          source install/setup.bash
+
+      - name: Install Python dependencies
+        run: |
+          pip3 install requests
+
+      - name: Run tests
+        run: |
+          cd /root/ros2_ws
           bash -xv ./src/mypkg/test/test.bash /root
+
